* type=rule-merger | bugfix if panoramapostrules and no rule are set for exportcsv
* class UrlCategoryRuleContainer | bugfix for PHP 8.1 - variable not set
* type=address-merger | picketObject from upperlevel of type TMP is not possible - to not merge
* general - different classes - reordering reading of region objects - as these are taking precedence compare to address-group and address

GENERAL:
* extend resources folder for ip_Protocol and Region IPv4/v6 files


2.1.4 (20230512)
UTIL:
* type=vendor-migration | improve output if arguments are missing

BUGFIX:
* type=vendor-migration vendor=ciscoasa | fix to avoid none object to read isGroup()
* type=vendor-migration vendor=ciscoasa | bugfix for creating service - to not add e.g. tacacs as service port

GENERAL:
- update dynamic content to Device App-ID version: 8708-8036
- improvements for PHP8.2 - deprecated variable declaration | function utf8_encode()


2.1.3 (20230511)
UTIL:
* type=rule ruletype=nat | introduce 'filter=(natruletype is XYZ)' - 'ipv4', 'nat64', 'nptv6'
* type=rule ruletype=nat | introduce 'filter=(snatinterface is.set)'
* type=rule ruletype=nat 'actions=exporttoexcel:test-export-service.html' | introduce nat_rule_type
* type=rule ruletype=nat | actions=display - introduce dnattype, dnatdistribution
* type=rule ruletype=nat | introduce 'filter=( dnattype is.dynamic )  | (dnattype is.static) | (dnatport eq SERIVCEport) | (dnatdistribution is.round-robin / is.source-ip-hash / is.ip-modulo / is.ip-hash / is.least-session)
* type=rule actions=exporttoexcel:file.html | extend with dnat_type, dnat_port, dnat_distribution field
* type=rule ruletype=nat | introduce 'filter=(dnatport is.set)' - improvements to handle dnat fields
* type=gcp | improve helper tool for specific mgmtsvc tenant
* type=rule ruletype=nat actions=exporttoexcel:file.html | extend NAT rule information with dst_interface and snat_interface
* type=rule actions=exporttoexcel:file.html - rename column 'type' to 'rule_type'

BUGFIX: